logic for hours work and late

--- a/index.html
+++ b/index.html
@@ -60,14 +60,16 @@
                         </table>
                     </div>
                     <div class="col mt-28 p-14 border-gray-500/40 border-2">
-                        <table class="w-[100%] overflow-auto border-collapse">
+                        <table class="w-[100%] overflow-auto border-collapse" id="hourswork_late">
                             <tr class="bg-gray-500 text-white">
                                 <th class="border-[1px] text-left p-[8px] border-black">Employee ID</th>
                                 <th class="border-[1px] text-left p-[8px] border-black bg-green-600">Total Hours Worked</th  >
-                                <th class="border-[1px] text-left p-[8px] border-black bg-red-600">LATE</th>
+                                <th class="border-[1px] text-left p-[8px] border-black bg-red-600/80">LATE (morning)</th>
+                                <th class="border-[1px] text-left p-[8px] border-black bg-red-600/90">LATE (afternoon)</th>
+                                <th class="border-[1px] text-left p-[8px] border-black bg-red-600">Total LATE</th>
                             </tr>
                             <tr class="!bg-slate-500/20">
-                                <td class="border-[1px] text-left p-[8px] border-slate-400">dummy</td>
+                                <td class="border-[1px] text-left p-[8px] border-slate-400">dummy</td>  
                                 <td class="border-[1px] text-left p-[8px] border-slate-400">dummy</td>
                                 <td class="border-[1px] text-left p-[8px] border-slate-400">dummy</td>
                             </tr>
